--- a/data/graph_basic_stats.ipynb
+++ b/data/graph_basic_stats.ipynb
@@ -22,6 +22,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. Statistical Properties of Graph\n",
+    "\n",
     "### 1.1 Basic Properties"
    ]
   },
@@ -65,6 +67,38 @@
     "\n",
     "intersections = [[h]+[jacc(s1, s2) if not (s1 is s2) else None for s2 in sets] for s1, h in zip(sets, headers)]\n",
     "print(tabulate(intersections, headers=[\"jaccard distances\"]+headers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Statistical Properties of Text Descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# length statistics\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "lens = list(map(len, map(str.split, descriptions.values())))\n",
+    "\n",
+    "plt.hist(lens)\n",
+    "plt.show()\n",
+    "\n",
+    "ls, freqs = list(zip(*sorted(Counter(lens).items())))\n",
+    "\n",
+    "\n",
+    "plt.loglog(ls, freqs, \".\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "sns.histplot(lens, log_scale=(10 ,10))"
    ]
   }
  ],
