--- a/data/first_steps_RDF.ipynb
+++ b/data/first_steps_RDF.ipynb
@@ -4,33 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First Exploration of the Wereldculturen RDF Dumps\n",
-    "\n",
-    "#### What do we want to do here? (*to be expanded*)\n",
-    " - (distributional) properties of objects & terms\n",
-    "   - distribution over objects, object properties \n",
-    "\n",
-    " - explore the properties of the collection graph & thesaurus graph:\n",
-    "   - network structure (connectivity, etc)\n",
-    "   \n",
-    " - explore the connections between collection & thesaurus (collection links into thesaurus)\n",
-    "   - intersections of entities\n",
-    "   - density of indexed terms in collection\n",
+    "# First Steps with the Wereldculturen RDF Dumps\n",
     "\n",
     "\n",
-    "#### TODO\n",
-    "\n",
-    " - move the basic functions (such as loading the graph) into Python module\n",
-    "\n",
-    "\n",
-    "\n"
+    "this notebook is just a playground to learn how to interact with the MvW data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparation\n",
+    "## Preparation\n",
     "\n",
     "The collection data RDF dumps are too large to be uploaded to GitHub. You can get the necessary data for this notebook [here](https://collectie.wereldculturen.nl/thesaurus/#/query/89a9b00f-5f4b-4fef-bf00-32299ba16c85). Download both the collection dumps *and* the thesaurus dumps, and put the results of unzipping in folders 'objects' and 'thesaurus' respectively\n",
     "\n",
@@ -58,19 +42,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "basci functions are defined in `utils.py`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import load_RDF_from_dir"
+    "from utils import load_RDF_from_dir, graph_to_df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading objects and thesaurus"
+    "## Load objects and thesaurus"
    ]
   },
   {
@@ -82,8 +73,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing random files from /objects: 100%|██████████| 1/1 [00:01<00:00,  1.31s/it]\n",
-      "Parsing random files from /thesaurus: 100%|██████████| 1/1 [00:00<00:00,  1.96it/s]\n"
+      "Parsing random files from /objects: 100%|██████████| 1/1 [00:01<00:00,  1.42s/it]\n",
+      "Parsing random files from /thesaurus: 100%|██████████| 1/1 [00:00<00:00,  1.48it/s]\n"
      ]
     }
    ],
@@ -96,6 +87,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Store graphs' triples in data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "500it [00:00, 37849.26it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj_df = graph_to_df(obj_graph, qname=obj_graph.namespace_manager.qname)\n",
+    "thes_df = graph_to_df(thesaurus, qname=thesaurus.namespace_manager.qname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((500, 20),\n",
+       " Index(['object_URI', 'http://www.w3.org/1999/02/22-rdf-syntax-ns#type',\n",
+       "        'http://www.w3.org/2004/02/skos/core#inScheme',\n",
+       "        'http://www.w3.org/2004/02/skos/core#notation',\n",
+       "        'http://www.w3.org/2004/02/skos/core#note',\n",
+       "        'http://www.w3.org/2004/02/skos/core#prefLabel',\n",
+       "        'http://www.w3.org/2004/02/skos/core#altLabel',\n",
+       "        'http://www.w3.org/2004/02/skos/core#exactMatch',\n",
+       "        'http://www.w3.org/2004/02/skos/core#broader',\n",
+       "        'http://www.w3.org/2004/02/skos/core#narrower'],\n",
+       "       dtype='object'))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## Dealing with Namespaces & Types"
@@ -103,9 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('xml', rdflib.term.URIRef('http://www.w3.org/XML/1998/namespace'))\n",
+      "('rdf', rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#'))\n",
+      "('rdfs', rdflib.term.URIRef('http://www.w3.org/2000/01/rdf-schema#'))\n",
+      "('xsd', rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#'))\n",
+      "('foaf', rdflib.term.URIRef('http://xmlns.com/foaf/0.1/'))\n",
+      "('edm', rdflib.term.URIRef('http://www.europeana.eu/schemas/edm/'))\n",
+      "('dcterms', rdflib.term.URIRef('http://purl.org/dc/terms/'))\n",
+      "('dc', rdflib.term.URIRef('http://purl.org/dc/elements/1.1/'))\n"
+     ]
+    }
+   ],
    "source": [
     "# the predicates in the object graph and the thesaurus are from these namespaces (plus others)\n",
     "from rdflib.namespace import RDF, DC, DCTERMS, SKOS\n",
@@ -235,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### .1 Construct DataFrame from graph\n",
+    "## Construct DataFrame from graph\n",
     "\n",
     "per object one record\n",
     "\n",
@@ -247,46 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from utils import graph_to_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "500it [00:00, 1205.42it/s]\n"
-     ]
-    }
-   ],
    "source": [
     "obj_df = graph_to_df(obj_graph, qname=obj_graph.namespace_manager.qname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.428"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "obj_df.columns\n",
     "\n",
