--- a/data/graph_basic_stats.ipynb
+++ b/data/graph_basic_stats.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descriptive Stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO \n",
-    "# imports\n",
-    "# load graphs -> define obj_graph & thesaurus"
+    "# Descriptive Statistics & Basic Properties\n",
+    "\n",
+    "#### What do we want to do here? (*to be expanded*)\n",
+    " - (distributional) properties of objects & terms\n",
+    "   - distribution over objects, object properties \n",
+    "\n",
+    " - explore the properties of the collection graph & thesaurus graph:\n",
+    "   - network structure (connectivity, etc)\n",
+    "   \n",
+    " - explore the connections between collection & thesaurus (collection links into thesaurus)\n",
+    "   - intersections of entities\n",
+    "   - density of indexed terms in collection\n"
    ]
   },
   {
