--- a/data/first_steps_DB_dumps.ipynb
+++ b/data/first_steps_DB_dumps.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -147,7 +149,7 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -304,6 +306,87 @@
     "    print(df.head())\n",
     "            \n",
     "    print(\"\\n\", \"-\"*30, \"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Can also use Pandas to directly parse query result into DataFrame\n",
+    "\n",
+    "via `pandas.read_sql` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT TOP 10000 * FROM Objects;\"\n",
+    "df = pd.read_sql(query, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(b'\\x00\\x00\\x00\\x00\\x00\\xdf\\xaak', '\\x00\\x00\\x00\\x00\\x00ßªk')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = df.GSRowVersion[0]\n",
+    "\n",
+    "b, b.decode(\"latin-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "        ... \n",
+       "4995    None\n",
+       "4996    None\n",
+       "4997    None\n",
+       "4998    None\n",
+       "4999    None\n",
+       "Name: Chat, Length: 5000, dtype: object"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"object_5000.csv\")"
    ]
   }
  ],
