--- a/data/first_steps_RDF.ipynb
+++ b/data/first_steps_RDF.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "basci functions are defined in `utils.py`:"
+    "basic functions are defined in `utils.py`:"
    ]
   },
   {
