--- a/data/tracking_a_term.ipynb
+++ b/data/tracking_a_term.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,22 +295,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "terms = pd.read_excel(\"Termen Words Matter (002).xlsx\", engine='openpyxl')"
+    "terms = pd.read_excel(\"../../Termen Words Matter (002).xlsx\", engine='openpyxl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['nummer', 'woord NL', 'woord UK', 'paginanr NL', 'paginanr Engels',\n",
+       "       'toelichting NL', 'toelichting UK', 'voorkeurs alternatief NL',\n",
+       "       'voorkeursalternatief UK', 'relatie met', 'relatie met ',\n",
+       "       'relatie met .1', 'relatie met.1', 'relatie met.2', 'relatie met.3',\n",
+       "       'relatie met.4', 'relatie met.5', 'relatie met.6', 'relatie met.7'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "terms.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            Aboriginal\n",
+       "1               Descent\n",
+       "2            Allochtoon\n",
+       "3             Barbarian\n",
+       "4               Servant\n",
+       "5                Berber\n",
+       "6                 Blank\n",
+       "7                Bombay\n",
+       "8            Bush Negro\n",
+       "9           Third World\n",
+       "10                Dwarf\n",
+       "11               Eskimo\n",
+       "12            Ethnicity\n",
+       "13               Exotic\n",
+       "14                  Gay\n",
+       "15              Colored\n",
+       "16           Half-blood\n",
+       "17             Disabled\n",
+       "18        Hermaphrodite\n",
+       "19           Homosexual\n",
+       "20            Hottentot\n",
+       "21           Inboorling\n",
+       "22               Indian\n",
+       "23              Indisch\n",
+       "24                 Indo\n",
+       "25           Indigenous\n",
+       "26                  NaN\n",
+       "27                  NaN\n",
+       "28         Jappenkampen\n",
+       "29               Kaffir\n",
+       "30            Caucasian\n",
+       "31               Coolie\n",
+       "32           Headhunter\n",
+       "33               Maroon\n",
+       "34         Medicine Man\n",
+       "35           Mohammedan\n",
+       "36            Mongoloid\n",
+       "37                 Moor\n",
+       "38              Mulatto\n",
+       "39               Native\n",
+       "40                Negro\n",
+       "41             Discover\n",
+       "42             Oriental\n",
+       "43    Politionele actie\n",
+       "44           Primitieve\n",
+       "45                Pygmy\n",
+       "46                Queer\n",
+       "47                 Race\n",
+       "48                Roots\n",
+       "49                Slave\n",
+       "50                Tribe\n",
+       "51          Traditional\n",
+       "52                Trans\n",
+       "53              Western\n",
+       "54                White\n",
+       "55                Gypsy\n",
+       "56                Black\n",
+       "Name: woord UK, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "terms[\"woord UK\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "terms[\"woord NL\"]"
+    "terms.to_csv(\"../../words_matter.csv\", index=False)"
    ]
   },
   {
@@ -318,30 +420,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "terms.shape"
+    "# Tracking Words in the Collections"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -362,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -434,7 +529,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
