pushing changes from the last few months

--- a/data/download_tables.ipynb
+++ b/data/download_tables.ipynb
@@ -92,10 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
@@ -106,13 +104,6 @@
     "\n",
     "import pyodbc"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,32 +152,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       name             modify_date\n",
-      "0       ClassificationXRefs 2021-02-05 11:09:55.290\n",
-      "1               Departments 2021-02-05 11:09:55.320\n",
-      "2                   Objects 2021-02-05 11:09:55.323\n",
-      "3           Classifications 2021-02-05 11:09:55.330\n",
-      "4                 TextTypes 2021-03-12 09:17:12.087\n",
-      "5             ThesXrefTypes 2021-03-12 09:17:12.097\n",
-      "6   ClassificationNotations 2021-03-12 09:17:12.110\n",
-      "7                 TermTypes 2021-03-12 09:17:12.120\n",
-      "8                 ThesXrefs 2021-03-12 09:17:12.123\n",
-      "9                 ObjTitles 2021-03-12 09:17:16.663\n",
-      "10              TextEntries 2021-03-12 09:17:16.783\n",
-      "11                    Terms 2021-03-12 09:17:16.877\n",
-      "12               TitleTypes 2021-03-12 09:17:24.050\n"
+     "ename": "OperationalError",
+     "evalue": "('HYT00', '[HYT00] [Microsoft][ODBC Driver 17 for SQL Server]Login timeout expired (0) (SQLDriverConnect)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-9a702b1f6d38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mconnect_to_DB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mq\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0;34m\"SELECT t.name, t.modify_date FROM sys.tables t\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mtables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mtables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"Person\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-bc1a05029a1d>\u001b[0m in \u001b[0;36mconnect_to_DB\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconnect_to_DB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mpyodbc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DRIVER='\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m';SERVER='\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mserver\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m';PORT=1433;DATABASE='\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdatabase\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m';UID='\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0musername\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m';PWD='\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: ('HYT00', '[HYT00] [Microsoft][ODBC Driver 17 for SQL Server]Login timeout expired (0) (SQLDriverConnect)')"
      ]
     }
    ],
    "source": [
+    "from time import time\n",
+    "t0 = time()\n",
     "with connect_to_DB() as conn:\n",
+    "    print()\n",
     "    q  = \"SELECT t.name, t.modify_date FROM sys.tables t\"\n",
     "    tables = pd.read_sql(q, conn)\n",
     "    tables = tables[tables.name != \"Person\"]\n",
@@ -202,24 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classifications\n",
-      "SELECT  ClassificationID,Classification,AATCN,SubClassification,SubClassification2 FROM Classifications TABLESAMPLE (10000 ROWS);\n",
-      "ClassificationXRefs\n",
-      "SELECT  ClassificationXRefID,ClassificationID,ID,TableID FROM ClassificationXRefs TABLESAMPLE (10000 ROWS);\n",
-      "Departments\n",
-      "SELECT  DepartmentID,Department,Mnemonic FROM Departments TABLESAMPLE (10000 ROWS);\n",
-      "Objects\n",
-      "SELECT  ObjectID,DepartmentID,ClassificationID,ObjectName,Title,Description,Provenance FROM Objects TABLESAMPLE (10000 ROWS);\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "keys = {\"Classifications\": (\"ClassificationID\", \"Classification\", \"AATCN\", \"SubClassification\", \"SubClassification2\"),\n",
     "       \"ClassificationXRefs\": (\"ClassificationXRefID\", \"ClassificationID\", \"ID\", \"TableID\"),\n",
@@ -249,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
