putting v0_2 on server

--- a/backend/v0_2/dev.ipynb
+++ b/backend/v0_2/dev.ipynb
@@ -521,13 +521,7 @@
       "  1%|          | 5591/579927 [00:38<1:02:26, 153.28it/s]\u001b[A\n",
       "  1%|          | 5626/579927 [00:38<1:06:43, 143.46it/s]\u001b[A\n",
       "  1%|          | 5654/579927 [00:38<1:01:10, 156.47it/s]\u001b[A\n",
-      "  1%|          | 5686/579927 [00:38<54:58, 174.10it/s]  \u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  1%|          | 5686/579927 [00:38<54:58, 174.10it/s]  \u001b[A\n",
       "  1%|          | 5713/579927 [00:39<1:11:40, 133.51it/s]\u001b[A\n",
       "  1%|          | 5846/579927 [00:39<32:06, 298.06it/s]  \u001b[A\n",
       "  1%|          | 5907/579927 [00:39<29:47, 321.14it/s]\u001b[A\n",
@@ -809,13 +803,7 @@
       "  1%|▏         | 7426/579927 [01:30<8:58:07, 17.73it/s]\u001b[A\n",
       "  1%|▏         | 7429/579927 [01:31<7:58:59, 19.92it/s]\u001b[A\n",
       "  1%|▏         | 7434/579927 [01:31<7:08:56, 22.24it/s]\u001b[A\n",
-      "  1%|▏         | 7440/579927 [01:31<5:27:16, 29.15it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  1%|▏         | 7440/579927 [01:31<5:27:16, 29.15it/s]\u001b[A\n",
       "  1%|▏         | 7445/579927 [01:31<4:52:36, 32.61it/s]\u001b[A\n",
       "  1%|▏         | 7451/579927 [01:31<4:09:39, 38.22it/s]\u001b[A\n",
       "  1%|▏         | 7456/579927 [01:31<6:13:38, 25.54it/s]\u001b[A\n",
@@ -1097,13 +1085,7 @@
       "  2%|▏         | 8792/579927 [02:11<6:55:03, 22.93it/s]\u001b[A\n",
       "  2%|▏         | 8795/579927 [02:11<6:34:19, 24.14it/s]\u001b[A\n",
       "  2%|▏         | 8798/579927 [02:11<6:38:55, 23.86it/s]\u001b[A\n",
-      "  2%|▏         | 8801/579927 [02:11<6:34:10, 24.15it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  2%|▏         | 8801/579927 [02:11<6:34:10, 24.15it/s]\u001b[A\n",
       "  2%|▏         | 8804/579927 [02:11<6:25:45, 24.68it/s]\u001b[A\n",
       "  2%|▏         | 8807/579927 [02:11<6:14:11, 25.44it/s]\u001b[A\n",
       "  2%|▏         | 8810/579927 [02:12<6:13:47, 25.47it/s]\u001b[A\n",
@@ -1385,13 +1367,7 @@
       "  2%|▏         | 10061/579927 [02:53<3:54:00, 40.59it/s]\u001b[A\n",
       "  2%|▏         | 10066/579927 [02:53<3:59:56, 39.58it/s]\u001b[A\n",
       "  2%|▏         | 10071/579927 [02:54<3:57:18, 40.02it/s]\u001b[A\n",
-      "  2%|▏         | 10076/579927 [02:54<3:45:16, 42.16it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  2%|▏         | 10076/579927 [02:54<3:45:16, 42.16it/s]\u001b[A\n",
       "  2%|▏         | 10083/579927 [02:54<3:15:41, 48.53it/s]\u001b[A\n",
       "  2%|▏         | 10093/579927 [02:54<2:35:20, 61.14it/s]\u001b[A\n",
       "  2%|▏         | 10102/579927 [02:54<2:19:54, 67.88it/s]\u001b[A\n",
@@ -1669,13 +1645,7 @@
       "  2%|▏         | 11927/579927 [03:35<3:48:46, 41.38it/s]\u001b[A\n",
       "  2%|▏         | 11933/579927 [03:35<3:35:02, 44.02it/s]\u001b[A\n",
       "  2%|▏         | 11938/579927 [03:36<3:35:07, 44.00it/s]\u001b[A\n",
-      "  2%|▏         | 11943/579927 [03:36<3:38:10, 43.39it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  2%|▏         | 11943/579927 [03:36<3:38:10, 43.39it/s]\u001b[A\n",
       "  2%|▏         | 11948/579927 [03:36<3:56:10, 40.08it/s]\u001b[A\n",
       "  2%|▏         | 11959/579927 [03:36<2:47:02, 56.67it/s]\u001b[A\n",
       "  2%|▏         | 11966/579927 [03:36<2:41:23, 58.65it/s]\u001b[A\n",
@@ -1813,6 +1783,64 @@
    ],
    "source": [
     "[nlp(t) for t in tqdm(df.Description) if isinstance(t, str)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4626b8d4",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "902ad113",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kws = \"\" # \"hello, goodbye\"\n",
+    "prep_kws = \"|\".join(kws.lower().replace(\", \", \",\").split(\",\"))\n",
+    "        \n",
+    "if (not kws.strip()) or (not prep_kws):\n",
+    "    does_contain = [True]*df.shape[0]\n",
+    "else:\n",
+    "    print(\"what\")\n",
+    "    \n",
+    "print(does_contain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d0585cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"objectKeywords\":\"\",\"objectStartDate\":\"\",\"objectEndDate\"'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from urllib.parse import unquote\n",
+    "\n",
+    "unquote('\"objectKeywords\"%3A\"\"%2C\"objectStartDate\"%3A\"\"%2C\"objectEndDate\"')"
    ]
   }
  ],
